# xmonad-config

./: .dir-locals.el  .gitignore  .gitmodules  LICENSE  TODO.org  brittany.yaml  build  cabal.project  hie.yaml  stack.yaml  xmonad-config.cabal  xmonad.hs  xmonadctl.hs
.github/workflows/: build.yml  haskell.yml  hlint.yml
lib/Custom/: GridSelect.hs  Keymap.hs  Layouts.hs  MouseBindings.hs  Prompt.hs  ShowWName.hs  TreeSelect.hs  Variables.hs  Windows.hs  Workspaces.hs  XConfig.hs
lib/Custom/Configs/: Apps.hs  GridSelectConfig.hs  LayoutConfig.hs  PromptConfig.hs  ShowWNameConfig.hs  TreeSelectConfig.hs
lib/Custom/Hooks/: HandleEventHook.hs  LayoutHook.hs  LogHook.hs  ManageHook.hs  StartupHook.hs  WindowNavigationHook.hs
lib/Custom/Keymap/: MajorKeymap.hs  TreeSelectKeymap.hs
lib/Custom/Util/: Apps.hs  Color.hs  DBus.hs  Font.hs  Polybar.hs  TreeSelect.hs  XMobar.hs
src/Custom/: Keymap.hs  MouseBindings.hs  Variables.hs
src/Custom/Hooks/: HandleEventHook.hs  LayoutHook.hs  ManageHook.hs  StartupHook.hs
src/Custom/Util/: Keymap.hs  Prompt.hs  Run.hs  Workspaces.hs
src/XMonad/Custom/: Keymap.hs  MouseBindings.hs  Variables.hs
src/XMonad/Custom/Hooks/: HandleEventHook.hs  LayoutHook.hs  ManageHook.hs  StartupHook.hs
src/XMonad/Custom/Util/: Keymap.hs  Prompt.hs  Run.hs  Workspaces.hs
