name:          xmonad-config
version:       0.1.0.0
license:       BSD3
author:        Lucius Hu
maintainer:    Lucius Hu
build-type:    Simple
cabal-version: >=1.10

executable xmonadcfg
  main-is:          ../xmonad.hs
  other-modules:
    Custom.Configs.LayoutConfig
    Custom.Configs.ShowWNameConfig
    Custom.Hooks.HandleEventHook
    Custom.Hooks.LayoutHook
    Custom.Hooks.LogHook
    Custom.Hooks.ManageHook
    Custom.Hooks.StartupHook
    Custom.Hooks.WindowNavigationHook
    Custom.Keymap
    Custom.Keymap.MajorKeymap
    Custom.Layouts
    Custom.MouseBindings
    Custom.Prompt
    Custom.Util.Color
    Custom.Util.DBus
    Custom.Util.Polybar
    Custom.Variables
    Custom.Workspaces
    Custom.XConfig

  build-depends:
      base
    , containers
    , dbus
    , directory
    , filepath
    , mtl
    , utf8-string
    , X11
    , xmonad          >=0.15
    , xmonad-contrib  >=0.16

  hs-source-dirs:   lib
  default-language: Haskell2010
  ghc-options:      -Wall -Werror -threaded -Wno-missing-signatures -haddock

executable xmonadctl
  main-is:          xmonadctl.hs
  build-depends:
      base
    , X11

  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:
    -Wall -Werror -threaded -Wno-missing-signatures -Wno-unused-imports
    -dynamic
