name:          xmonad-config
version:       0.2.0.0
license:       BSD3
author:        Lucius Hu
maintainer:    Lucius Hu
build-type:    Simple
cabal-version: >=1.10

executable xmonadcfg
  main-is:          ../xmonad.hs
  other-modules:
    Custom.Hooks.HandleEventHook
    Custom.Hooks.LayoutHook
    Custom.Hooks.ManageHook
    Custom.Hooks.StartupHook
    Custom.Keymap
    Custom.MouseBindings
    Custom.Util.Keymap
    Custom.Util.Prompt
    Custom.Util.Run
    Custom.Util.Workspaces
    Custom.Variables

  build-depends:
                    base
                  , containers
                  , dbus
                  , directory
                  , filepath
                  , mtl
                  , unix
                  , unordered-containers
                  , utf8-string
                  , xmonad          >=0.17
                  , xmonad-contrib  >=0.17
                  , X11

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -Werror -threaded -Wno-missing-signatures

executable xmonadctl
  main-is:          xmonadctl.hs
  build-depends:
      base
    , X11

  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -Werror -threaded -Wno-missing-signatures -dynamic
