name:          xmonad-config
version:       0.2.0.0
license:       BSD3
author:        Lucius Hu
maintainer:    Lucius Hu
build-type:    Simple
cabal-version: >=1.10

executable xmonadcfg
  main-is:          ../xmonad.hs
  other-modules:
    XMonad.Custom.Hooks.HandleEventHook
    XMonad.Custom.Hooks.LayoutHook
    XMonad.Custom.Hooks.ManageHook
    XMonad.Custom.Hooks.StartupHook
    XMonad.Custom.Keymap
    XMonad.Custom.MouseBindings
    XMonad.Custom.Util.Keymap
    XMonad.Custom.Util.Prompt
    XMonad.Custom.Util.Run
    XMonad.Custom.Util.Workspaces
    XMonad.Custom.Variables

  build-depends:
                    base
                  , containers
                  , dbus
                  , directory
                  , filepath
                  , mtl
                  , unix
                  , unordered-containers
                  , utf8-string
                  , xmonad          >=0.17
                  , xmonad-contrib  >=0.17
                  , X11

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -Werror -threaded -Wno-missing-signatures

executable xmonadctl
  main-is:          xmonadctl.hs
  build-depends:
      base
    , X11

  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -Werror -threaded -Wno-missing-signatures -dynamic
